new hero section

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 	</head>
 	<body class="home">
 		<section id="intro" class="intro">
-			<h1 class="site-title">Fábio Z.C.</h1>
-			<p class="site-description">Hi! I'm a Brazilian UI/UX and frontend designer, with more than 15 years of experience and crazy about technology. Take a look at more details <a href="#about">about me</a>.</p>
-			<a class="header-button" href="#portfolio">Check out my portfolio</a>
-			<a class="header-link btn-resume" target="_blank" href="docs/fabiozc-cv.pdf">Download my Resumé</a>
+			<div class="container">
+				<h1 class="site-title">Hi! My name is Fábio.</h1>
+				<p class="site-description">I'm a Product (UI/UX) and Frontend designer.</p>
+				<a class="header-button" href="#portfolio">Check out my portfolio</a>
+				<a class="header-link btn-resume" target="_blank" href="docs/fabiozc-cv.pdf">Download my Resumé</a>
+			</div>
 		</section>
 		<section id="portfolio" class="portfolio">
 			<h2 class="section-title">Portfolio</h2>
