changed headline text

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<body class="home">
 		<section id="intro" class="intro main-section">
 			<div class="container">
-				<h1 class="site-title">Hi! My name is Fábio</h1>
-				<p class="site-description">I'm a Product (UI/UX) and Frontend designer.</p>
+				<h1 class="site-title">Hi! My name is Fábio,</h1>
+				<p class="site-description">I'm a Product (UX/UI) and Frontend designer.</p>
 			</div>
 		</section>
 		<section id="portfolio" class="portfolio main-section">
