--- a/index.html
+++ b/index.html
@@ -311,6 +311,6 @@
 		</script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 		<!--<script type="text/javascript" src="js/instafeed.min.js"></script-->
-		<script type="text/javascript" src="js/scripts.js"></script>
+		<script type="text/javascript" src="js/min/scripts-min.js"></script>
 	</body>
 </html>
