removed old portfolio itens

--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="pt-BR">
 	<head>
-		<!--
-			THANK YOU FOR STOPING BY! =)
-
-			PS: It's not a final version!
-		-->
 		<meta charset="utf-8">
 		<title>Fábio Z.C. | UI/UX & Frontend Designer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,13 +10,13 @@
 		<meta name="robots" content="noindex" />
 	</head>
 	<body class="home">
-		<section id="intro" class="intro main-section">
+		<section id="intro" class="main-section intro">
 			<div class="container">
 				<h1 class="site-title">Hi! My name is Fábio,</h1>
 				<p class="site-description">I'm a Product (UX/UI) and Frontend designer.</p>
 			</div>
 		</section>
-		<section id="portfolio" class="portfolio main-section">
+		<section id="portfolio" class="main-section portfolio">
 			<div class="container">
 				<h2 class="section-title">Portfolio</h2>
 				<p class="section-help">Take a look at my most relevant work</p>
@@ -30,10 +25,6 @@
 					<a href="#must">MUST</a>
 					<a href="#spotify">Spotify Miniplayer</a>
 					<a href="#9digito">9Digito</a>
-					<a href="#eduk">Eduk</a>
-					<a href="#fmarq">FM Arq</a>
-					<a href="#cademeufilho">Cadê meu Filho</a>
-					<a href="#rosamais">Borbô</a>
 				</nav>
 				<ul class="gallery">
 					<li id="cuponomia" class="port-item active">
@@ -81,54 +72,6 @@
 						<span class="port-tag">iOS</span>
 						<p class="port-description">9Dígito was a iOS App to attend a special demand for mobile number change in Brazil and it reached 3rd place on overall FREE of App Store helping hundreds of thousands to fix their contact numbers. The main feature among our competitors was the ease of use. It was made in partership with Lucas Michelini who wrote the iOS code.</p>
 					</li>
-					<li id="eduk" class="port-item">
-						<span class="port-gallery">
-							<img class="port-img port-img-2" src="img/port/eduk-port2-1.png" alt="eduk - Artesanato e Ponto">
-							<img class="port-img port-img-2" src="img/port/eduk-port2-2.png" alt="eduk - Mentorama">
-						</span>
-						<h3 class="port-title">eduK</h3>
-						<span class="port-tag">Frontend</span>
-						<span class="port-tag">SEO</span>
-						<span class="port-tag">Wordpress</span>
-						<p class="port-description">The objective of this job was to publish a fully functional blog in just a week for each blog. With this kind of short schedule, the tasks needed to be well prioritized. This job also offered some SEO challenges. PS: This project didn't include the design.</p>
-						<a class="port-link" href="http://www.eduk.com.br/blog/artesanato-e-ponto" target="_blank">Visit Artesanato e Ponto →</a> <br/>
-						<a class="port-link" href="http://www.eduk.com.br/blog/mentorama" target="_blank">Visit Mentorama →</a>
-					</li>
-					<li id="fmarq" class="port-item">
-						<span class="port-gallery">
-							<img class="port-img port-img-2" src="img/port/fmarq-port2-2.png" alt="FM Arq - Site">
-							<img class="port-img port-img-2" src="img/port/fmarq-port2-1.png" alt="FM Arq - Brochures">
-						</span>
-						<h3 class="port-title">FM Arquitetura</h3>
-						<span class="port-tag">UX/UI</span>
-						<span class="port-tag">Frontend</span>
-						<span class="port-tag">Wordpress</span>
-						<span class="port-tag">Brochures</span>
-						<p class="port-description">FM Arq was a job done in 2011 from the brochures to site development. The site was made in wordpress keeping in mind an easy way for them to update the site themselves.</p>
-						<a class="port-link" href="" target="_blank">Go to FM Arq website →</a>
-					</li>
-					<li id="cademeufilho" class="port-item">
-						<span class="port-gallery">
-							<img class="port-img port-img-3" src="img/port/cademeufilho-port3-2.png" alt="Cadê meu filho?">
-							<img class="port-img port-img-3" src="img/port/cademeufilho-port3-1.png" alt="Cadê meu filho?">
-							<img class="port-img port-img-3" src="img/port/cademeufilho-port3-3.png" alt="Cadê meu filho?">
-						</span>
-						<h3 class="port-title">Cadê meu filho?</h3>
-						<span class="port-tag">Concept</span>
-						<span class="port-tag">UX/UI</span>
-						<p class="port-description">It was just a simple prototype to evaluate an idea for parents to know where they children are. The idea didn't come out of the paper.</p>
-					</li>
-					<li id="rosamais" class="port-item">
-						<span class="port-gallery">
-							<img class="port-img port-img-2" src="img/port/rosamais-port2-2.png" alt="RosaMais / Borbô Lingerie">
-							<img class="port-img port-img-2" src="img/port/rosamais-port2-1.png" alt="RosaMais / Borbô Lingerie">
-						</span>
-						<h3 class="port-title">Borbô</h3>
-						<span class="port-tag">UX/UI</span>
-						<span class="port-tag">Frontend</span>
-						<span class="port-tag">Magento</span>
-						<p class="port-description">Borbô Lingerie was an ecommerce focused on women's market. It was developed in Magento and I had the challenge to make things beautiful, diferent and with a good user experience. The site is currently unavailable.</p>
-					</li>
 				</ul>
 			</div>
 			<div class="nav-controls">
@@ -136,7 +79,7 @@
 				<span class="nav-control nav-next">Next</span>
 			</div>
 		</section>
-		<section id="about" class="about main-section">
+		<section id="about" class="main-section about">
 			<div class="container">
 				<h2 class="section-title">About Me</h2>
 				<p class="section-help">Just a few words about my carreer and myself</p>
