font type and size adjustments

--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html class="no-js" lang="pt-BR">
 	<head>
 		<meta charset="utf-8">
-		<title>Fábio Z.C. | UI/UX & Frontend Designer</title>
+		<title>Fábio Z.C. | Product (UX/UI) and Frontend Designer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="css/style.css" rel="stylesheet" />
-		<!-- For personal reasons I disabled Google from indexing my site (temporally) -->
+		<!-- For personal reasons I temporally disabled Google from indexing my site -->
 		<link rel="canonical">
 		<meta name="robots" content="noindex" />
 	</head>
 	<body class="home">
-		<section id="intro" class="main-section intro">
-			<div class="container">
-				<h1 class="site-title">Hi! My name is Fábio,</h1>
-				<p class="site-description">I'm a Product (UX/UI) and Frontend designer.</p>
-			</div>
+		<section id="intro" class="main-section container intro js-intro">
+			<h1 class="intro-title">Hi! My name is Fábio, <span class="intro-description">I'm a Product (UX/UI) and Frontend designer.</span></h1>
 		</section>
 		<section id="portfolio" class="main-section portfolio">
 			<div class="container">
@@ -86,14 +83,16 @@
 				<ul class="skills">
 					<li class="skill-item larger">Pixel Perfect Design</li>
 					<li class="skill-item largest">User Experience</li>
-					<li class="skill-item">Wordpress</li>
+					<li class="skill-item largest">HTML/CSS</li>
+					<li class="skill-item large">Wordpress</li>
+					<li class="skill-item larger">Prototyping</li>
+					<li class="skill-item larger">A/B Test</li>
+					<li class="skill-item">Javscript</li>
+					<li class="skill-item large">jQuery</li>
 					<li class="skill-item large">SEO</li>
-					<li class="skill-item">A/B Test</li>
-					<li class="skill-item">HTML/CSS</li>
-					<li class="skill-item larger">Prototype</li>
-					<li class="skill-item small">jQuery</li>
-					<li class="skill-item">Google Analytics</li>
-					<li class="skill-item">Git</li>
+					<li class="skill-item large">Google Analytics</li>
+					<li class="skill-item smaller">React</li>
+					<li class="skill-item large">Git</li>
 					<li class="skill-item smallest">PHP, .Net, Java, Ruby</li>
 				</ul>
 				<section class="about-intro">
@@ -108,7 +107,7 @@
 				</section>
 				<section class="about-companies">
 					<h3 class="section-subtitle">Software/Tools that I like to use</h3>
-					<ul class="list tools-list">
+					<ul class="inspiration-list tools-list">
 						<li class="tools-item"><a href="http://apple.com/" rel="nofollow" target="_blank"><img alt="Apple" src="https://twitter.com/apple/profile_image?size=original" /> OSX / iOS</a></li>
 						<li class="tools-item"><a href="http://sketchapp.com/" rel="nofollow" target="_blank"><img alt="Sketch" src="https://twitter.com/sketchapp/profile_image?size=original" /> Sketch</a></li>
 						<li class="tools-item"><a href="http://principleformac.com/" rel="nofollow" target="_blank"><img alt="Principle" src="https://twitter.com/principleapp/profile_image?size=original" /> Principle</a></li>
@@ -132,7 +131,7 @@
 				</section>
 				<section class="about-blogs">
 					<h3 class="section-subtitle">Blogs that I'm used to follow</h3>
-					<ul class="list blogs-list">
+					<ul class="inspiration-list blogs-list">
 						<li class="blogs-item"><a href="https://www.smashingmagazine.com/" rel="nofollow" target="_blank"><img alt="@smashingmag" src="https://twitter.com/smashingmag/profile_image?size=original" />Smashing Magazine</a></li>
 						<li class="blogs-item"><a href="http://abduzeedo.com/" rel="nofollow" target="_blank"><img alt="@abdz" src="https://twitter.com/abdz/profile_image?size=original" />Abduzeedo</a></li>
 						<li class="blogs-item"><a href="http://blog.invisionapp.com/" rel="nofollow" target="_blank"><img alt="@InVisionApp" src="https://twitter.com/InVisionApp/profile_image?size=original" />InVision Blog</a></li>
@@ -150,7 +149,7 @@
 				</section>
 				<section class="about-companies">
 					<h3 class="section-subtitle">Companies that I look closely</h3>
-					<ul class="list companies-list">
+					<ul class="inspiration-list companies-list">
 						<li class="companies-item"><a href="http://www.apple.com" rel="nofollow" target="_blank"><img alt="Apple.com" src="https://twitter.com/apple/profile_image?size=original" /> Apple</a></li>
 						<li class="companies-item"><a href="https://twitter.com/Tesla" rel="nofollow" target="_blank"><img alt="@Tesla" src="https://twitter.com/Tesla/profile_image?size=original" /> Tesla</a></li>
 						<li class="companies-item"><a href="https://twitter.com/solarcity" rel="nofollow" target="_blank"><img alt="@solarcity" src="https://twitter.com/solarcity/profile_image?size=original" /> Solar City</a></li>
