removed redundant content

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<span class="port-tag">UX/UI</span>
 						<span class="port-tag">Frontend</span>
 						<span class="port-tag">Wordpress</span>
-						<p class="port-description">Miami University of Science & Tecnology - This project is under development. It will be launched in August/2016. I was responsible for all the elements of the brand. The website was designed to be focused in a specific target and this first version was developed in Wordpress with the objective to quickly test some possibilities of changes and maintenance.</p>
+						<p class="port-description">Miami University of Science & Tecnology. I was responsible for all the elements of the brand. The website was designed to be focused in a specific target and this first version was developed in Wordpress with the objective to quickly test some possibilities of changes and maintenance.</p>
 					</li>
 					<li id="spotify" class="port-item">
 						<span class="port-gallery">
@@ -90,7 +90,7 @@
 			<div class="container">
 				<h2 class="section-title">Just a few words about my carreer and myself</h2>
 				<section class="sub-section about-intro">
-					<p class="intro-text">I'm a <strong>Product Designer (UX/UI) and Frontend Designer</strong>, currently living in <strong>Amsterdam</strong> and originally from São Paulo, Brazil. I graduated in Digital Design, passionate about design, technology, innovation, entrepreneurship, travels and cars. I'm a easy going, well organized person and I believe that with politeness and respect the world would be a better place to live. In 2012, I had an incredible experience living for 4 months in Mountain View, California, in the heart of Silicon Valley during a acceleration process inside 500 Startups where I was in contact with 30+ companies from all around the world.</p>
+					<p class="intro-text">I'm a <strong>Product (UX/UI) and Frontend Designer</strong>, currently living in <strong>Amsterdam</strong> and originally from São Paulo, Brazil. I graduated in Digital Design, passionate about design, technology, innovation, entrepreneurship, travels and cars. I'm a easy going, well organized person and I believe that with politeness and respect the world would be a better place to live. In 2012, I had an incredible experience living for 4 months in Mountain View, California, in the heart of Silicon Valley during a acceleration process inside 500 Startups where I was in contact with 30+ companies from all around the world.</p>
 				</section>
 				<ul class="skills">
 					<li class="skill-item larger">Pixel Perfect Design</li>
