added copyright bar under footer

--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
 			<a class="btn-portfolio" href="#portfolio">Back to portfolio</a> or
 			<a class="btn-contact" href="mailto:portfolio@fabiozc.com">Send me a message!</a>
 		</footer>
+		<p class="copy">
+			© 2017 — Designed and <a target="_blank" href="https://www.github.com/fabiozc">Coded</a> by Fábio.
+		</p>
 		<script>
 			if(!window.location.href.indexOf("home") > -1){
 			    (function(h,o,t,j,a,r){
