text improvements on portfolio session

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<span class="port-tag">UX/UI</span>
 						<span class="port-tag">Frontend</span>
 						<span class="port-tag">SEO</span>
-						<p class="port-description">Cuponomia is one of the leaders of coupon code market in Brazil. An extremely data driven company with a strong focus in SEO. I've joined in Cuponomia as Co-Founder in 2012 right after that we joined at 500 Startup accelerator program. Nowadays I lead the design team and with a close relation with marketing, product, content and development area. <a class="port-link" href="http://www.cuponomia.com.br" target="_blank">Visit Cuponomia →</a></p>
+						<p class="port-description">I've joined in Cuponomia as Co-Founder in 2012 and helped them from the initial concept to profitable operations, in a short period of time we became leaders of coupon code market in Brazil. An extremely data driven company with a strong focus in SEO. I have been with Cuponomia at 500 Startup accelerator program in Mountain View, California. I was leading the design team and with a close relation with marketing, product, content and development area. <a class="port-link" href="http://www.cuponomia.com.br" target="_blank">Visit Cuponomia →</a></p>
 					</li>
 					<li id="must" class="port-item">
 						<span class="port-gallery">
@@ -36,7 +36,7 @@
 						<span class="port-tag">UX/UI</span>
 						<span class="port-tag">Frontend</span>
 						<span class="port-tag">Wordpress</span>
-						<p class="port-description">Miami University of Science & Tecnology. I was responsible for all the elements of the brand. The website was designed to be focused in a specific target and this first version was developed in Wordpress with the objective to quickly test some possibilities of changes and maintenance.</p>
+						<p class="port-description">Miami University of Science & Tecnology. I was responsible for all the elements of the brand. The first version of the website was focusing in a specific target and it was developed in Wordpress to quickly test some possibilities of changes and maintenance.</p>
 					</li>
 					<li id="spotify" class="port-item">
 						<span class="port-gallery">
@@ -46,7 +46,7 @@
 						<span class="port-tag">Concept</span>
 						<span class="port-tag">Prototype</span>
 						<span class="port-tag">Frontend</span>
-						<p class="port-description">I love the simplicity of things. Unfortenately, Spotify doesn't have a very friendly interface. So I made this prototype (without music) just to check what could be possible to do without hurting the current use of Spotify. <a class="port-link" href="/port/spotify" target="_blank">Check out this prototype →</a></p>
+						<p class="port-description">I love the simplicity of things. Unfortenately, Spotify doesn't have a small version of it, where you can listen to music keeping a miniplayer above your windows. So I made this prototype (without music) just to check what could be possible to do without hurting the current use of Spotify. <a class="port-link" href="/port/spotify" target="_blank">Check out this prototype →</a></p>
 						
 					</li>
 					<li id="9digito" class="port-item">
@@ -81,7 +81,7 @@
 						<span class="port-tag">UX/UI</span>
 						<span class="port-tag">Frontend</span>
 						<span class="port-tag">Magento</span>
-						<p class="port-description">Borbô Lingerie was an ecommerce focused on women's market. It was developed in Magento and I had the challenge to make things beautiful, diferent and with a good user experience. The site is currently unavailable.</p>
+						<p class="port-description">Borbô Lingerie was an ecommerce focused on women's market. It was developed in Magento and I had the challenge to make things beautiful, different and with a good user experience. The site is currently unavailable.</p>
 					</li>
 				</ul>
 			</div>
