retuned tools that i'm using

--- a/index.html
+++ b/index.html
@@ -107,22 +107,47 @@
 					<li class="skill-item largest">Prototyping</li>
 					<li class="skill-item smalle">PHP, .Net, Java, Ruby</li>
 				</ul>
+				<section class="about-tools">
+					<h3 class="section-subtitle">Software/Tools that I'm currently using</h3>
+					<ul class="inspiration-list tools-list">
+						<li class="tools-item"><a href="http://apple.com/" rel="nofollow" target="_blank"><img alt="Apple" src="https://twitter.com/apple/profile_image?size=original" />OSX / iOS</a></li>
+						<li class="tools-item"><a href="http://sketchapp.com/" rel="nofollow" target="_blank"><img alt="Sketch" src="https://twitter.com/sketchapp/profile_image?size=original" />Sketch</a></li>
+						<li class="tools-item"><a href="http://principleformac.com/" rel="nofollow" target="_blank"><img alt="Principle" src="https://twitter.com/principleapp/profile_image?size=original" />Principle</a></li>
+						<li class="tools-item"><a href="https://www.invisionapp.com/" rel="nofollow" target="_blank"><img alt="InVision" src="https://twitter.com/InVisionApp/profile_image?size=original" />InVision</a></li>
+						<li class="tools-item"><a href="http://www.sublimetext.com/" rel="nofollow" target="_blank"><img alt="Sublime Text" src="https://twitter.com/sublimetext2/profile_image?size=original" />Sublime Text</a></li>
+						<li class="tools-item"><a href="https://slack.com/" rel="nofollow" target="_blank"><img alt="Slack" src="https://twitter.com/slackHQ/profile_image?size=original" />Slack</a></li>
+						<li class="tools-item"><a href="https://trello.com/" rel="nofollow" target="_blank"><img alt="Trello" src="https://twitter.com/trello/profile_image?size=original" />Trello</a></li>
+						<li class="tools-item"><a href="https://dropbox.com/" rel="nofollow" target="_blank"><img alt="Dropbox" src="https://twitter.com/dropbox/profile_image?size=original" />Dropbox</a></li>
+						<li class="tools-item"><a href="https://incident57.com/codekit/" rel="nofollow" target="_blank"><img alt="Codekit" src="https://incident57.com/codekit/images/codekit-icon.png" />Codekit</a></li>
+						<li class="tools-item"><a href="https://optimizely.com/" rel="nofollow" target="_blank"><img alt="Optimizely" src="https://twitter.com/Optimizely/profile_image?size=original" />Optimizely</a></li>
+						<li class="tools-item"><a href="https://hotjar.com/" rel="nofollow" target="_blank"><img alt="Hotjar" src="https://twitter.com/hotjar/profile_image?size=original" />Hotjar</a></li>
+						<li class="tools-item"><a href="http://www.pixelmator.com/" rel="nofollow" target="_blank"><img alt="Pixelmator" src="https://twitter.com/pixelmator/profile_image?size=original" />Pixelmator</a></li>
+						<li class="tools-item"><a href="https://affinity.serif.com/en-us/designer/" rel="nofollow" target="_blank"><img alt="Affinity Designer" src="https://twitter.com/macaffinity/profile_image?size=original" />Affinity Designer</a></li>
+						<li class="tools-item"><a href="https://www.alfredapp.com/" rel="nofollow" target="_blank"><img alt="Alfred" src="https://twitter.com/alfredapp/profile_image?size=original" />Alfred</a></li>
+						<li class="tools-item"><a href="https://glyphsapp.com/" rel="nofollow" target="_blank"><img alt="Glyphs" src="https://twitter.com/glyphsapp/profile_image?size=original" />Glyphs</a></li>
+						<li class="tools-item"><a href="https://mindnode.com/" rel="nofollow" target="_blank"><img alt="Mindnode" src="https://twitter.com/mindnode/profile_image?size=original" />Mindnode</a></li>
+						<li class="tools-item"><a href="https://tinypng.com/" rel="nofollow" target="_blank"><img alt="TinyPNG" src="https://twitter.com/tinypng/profile_image?size=original" />TinyPNG</a></li>
+						<li class="tools-item"><a href="https://analytics.google.com/" rel="nofollow" target="_blank"><img alt="Google Analytics" src="https://twitter.com/googleanalytics/profile_image?size=original" />Google Analytics</a></li>
+						<li class="tools-item"><a href="https://github.com/" rel="nofollow" target="_blank"><img alt="Github" src="https://twitter.com/github/profile_image?size=original" />Github</a></li>
+						<li class="tools-item"><a href="https://codeship.com/" rel="nofollow" target="_blank"><img alt="Codeship" src="https://twitter.com/codeship/profile_image?size=original" />Codeship</a></li>
+					</ul>
+				</section>
 				<section class="sub-section about-companies">
 					<h3 class="section-subtitle">People who inspires me</h3>
         			<ul class="inspiration-list people-list">
-						<li class="people-item"><a href="https://twitter.com/elonmusk" rel="nofollow" target="_blank"><img alt="@elonmusk" src="https://twitter.com/elonmusk/profile_image?size=original" /> Elon Musk</a></li>
-						<li class="people-item"><a href="https://en.wikipedia.org/wiki/Steve_Jobs" rel="nofollow" target="_blank"><img alt="Steve Jobs" src="https://twitter.com/SteveJobs_es/profile_image?size=original" /> Steve Jobs</a></li>
-						<li class="people-item"><a href="https://en.wikipedia.org/wiki/Jonathan_Ive" rel="nofollow" target="_blank"><img alt="Jonathan Ive" src="https://static.dezeen.com/uploads/2014/03/Jonathan-Ive-portrait_dezeen_1.jpg" /> Jonathan Ive</a></li>
-						<li class="people-item"><a href="https://twitter.com/sacca" rel="nofollow" target="_blank"><img alt="@sacca" src="https://twitter.com/sacca/profile_image?size=original" /> Chris Sacca</a></li>
-						<li class="people-item"><a href="https://twitter.com/brad_frost" rel="nofollow" target="_blank"><img alt="@brad_frost" src="https://twitter.com/brad_frost/profile_image?size=original" /> Brad Frost</a></li>
-						<li class="people-item"><a href="https://twitter.com/MengTo" rel="nofollow" target="_blank"><img alt="@MengTo" src="https://twitter.com/MengTo/profile_image?size=original" /> Meng To</a></li>
-						<li class="people-item"><a href="https://twitter.com/lukew" rel="nofollow" target="_blank"><img alt="@lukew" src="https://twitter.com/lukew/profile_image?size=original" /> Luke Wroblewski</a></li>
-						<li class="people-item"><a href="https://twitter.com/meyerweb" rel="nofollow" target="_blank"><img alt="@meyerweb" src="https://twitter.com/meyerweb/profile_image?size=original" /> Eric Meyer</a></li>
-						<li class="people-item"><a href="https://twitter.com/biz" rel="nofollow" target="_blank"><img alt="@biz" src="https://twitter.com/biz/profile_image?size=original" /> Biz Stone</a></li>
-						<li class="people-item"><a href="https://twitter.com/EnriqueAllen" rel="nofollow" target="_blank"><img alt="@EnriqueAllen" src="https://twitter.com/EnriqueAllen/profile_image?size=original" /> Enrique Allen</a></li>
-						<li class="people-item"><a href="https://twitter.com/SachaGreif" rel="nofollow" target="_blank"><img alt="@SachaGreif" src="https://twitter.com/SachaGreif/profile_image?size=original" /> Sacha Greif</a></li>
-						<li class="people-item"><a href="https://twitter.com/JeffBezos" rel="nofollow" target="_blank"><img alt="@JeffBezos" src="https://twitter.com/JeffBezos/profile_image?size=original" /> Jeff Bezos</a></li>
-						<li class="people-item"><a href="https://twitter.com/peterthiel" rel="nofollow" target="_blank"><img alt="@peterthiel" src="https://twitter.com/peterthiel/profile_image?size=original" /> Peter Thiel</a></li>
+						<li class="people-item"><a href="https://twitter.com/elonmusk" rel="nofollow" target="_blank"><img alt="@elonmusk" src="https://twitter.com/elonmusk/profile_image?size=original" />Elon Musk</a></li>
+						<li class="people-item"><a href="https://en.wikipedia.org/wiki/Steve_Jobs" rel="nofollow" target="_blank"><img alt="Steve Jobs" src="https://twitter.com/SteveJobs_es/profile_image?size=original" />Steve Jobs</a></li>
+						<li class="people-item"><a href="https://en.wikipedia.org/wiki/Jonathan_Ive" rel="nofollow" target="_blank"><img alt="Jonathan Ive" src="https://static.dezeen.com/uploads/2014/03/Jonathan-Ive-portrait_dezeen_1.jpg" />Jonathan Ive</a></li>
+						<li class="people-item"><a href="https://twitter.com/sacca" rel="nofollow" target="_blank"><img alt="@sacca" src="https://twitter.com/sacca/profile_image?size=original" />Chris Sacca</a></li>
+						<li class="people-item"><a href="https://twitter.com/brad_frost" rel="nofollow" target="_blank"><img alt="@brad_frost" src="https://twitter.com/brad_frost/profile_image?size=original" />Brad Frost</a></li>
+						<li class="people-item"><a href="https://twitter.com/MengTo" rel="nofollow" target="_blank"><img alt="@MengTo" src="https://twitter.com/MengTo/profile_image?size=original" />Meng To</a></li>
+						<li class="people-item"><a href="https://twitter.com/lukew" rel="nofollow" target="_blank"><img alt="@lukew" src="https://twitter.com/lukew/profile_image?size=original" />Luke Wroblewski</a></li>
+						<li class="people-item"><a href="https://twitter.com/meyerweb" rel="nofollow" target="_blank"><img alt="@meyerweb" src="https://twitter.com/meyerweb/profile_image?size=original" />Eric Meyer</a></li>
+						<li class="people-item"><a href="https://twitter.com/biz" rel="nofollow" target="_blank"><img alt="@biz" src="https://twitter.com/biz/profile_image?size=original" />Biz Stone</a></li>
+						<li class="people-item"><a href="https://twitter.com/EnriqueAllen" rel="nofollow" target="_blank"><img alt="@EnriqueAllen" src="https://twitter.com/EnriqueAllen/profile_image?size=original" />Enrique Allen</a></li>
+						<li class="people-item"><a href="https://twitter.com/SachaGreif" rel="nofollow" target="_blank"><img alt="@SachaGreif" src="https://twitter.com/SachaGreif/profile_image?size=original" />Sacha Greif</a></li>
+						<li class="people-item"><a href="https://twitter.com/JeffBezos" rel="nofollow" target="_blank"><img alt="@JeffBezos" src="https://twitter.com/JeffBezos/profile_image?size=original" />Jeff Bezos</a></li>
+						<li class="people-item"><a href="https://twitter.com/peterthiel" rel="nofollow" target="_blank"><img alt="@peterthiel" src="https://twitter.com/peterthiel/profile_image?size=original" />Peter Thiel</a></li>
 					</ul>
 				</section>
 				<section class="sub-section about-blogs">
