fixed some text in the portfolio page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</section>
 		<section id="portfolio" class="main-section portfolio">
 			<div class="container">
-				<h2 class="section-title">Take a look at my most relevant work</h2>
+				<h2 class="section-title">My most relevant work</h2>
 				<ul class="gallery">
 					<li id="cuponomia" class="port-item active">
 						<span class="port-gallery">
@@ -25,7 +25,7 @@
 						<span class="port-tag">UX/UI</span>
 						<span class="port-tag">Frontend</span>
 						<span class="port-tag">SEO</span>
-						<p class="port-description">I've joined in Cuponomia as Co-Founder in 2012 and helped them from the initial concept to profitable operations, in a short period of time we became leaders of coupon code market in Brazil. An extremely data driven company with a strong focus in SEO. I have been with Cuponomia at 500 Startup accelerator program in Mountain View, California. I was leading the design team and with a close relation with marketing, product, content and development area. <a class="port-link" href="http://www.cuponomia.com.br" target="_blank">Visit Cuponomia →</a></p>
+						<p class="port-description">I've joined as Co-Founder in 2012 and helped them from the initial concept to profitable operations, in a short period of time we became leaders of coupon code market in Brazil. An extremely data driven company with a strong focus in SEO. I have been with Cuponomia at 500 Startup accelerator program in Mountain View, California. I was leading the design team and with a close relation with marketing, product, content and development area. <a class="port-link" href="http://www.cuponomia.com.br" target="_blank">Visit Cuponomia →</a></p>
 					</li>
 					<li id="must" class="port-item">
 						<span class="port-gallery">
@@ -36,7 +36,7 @@
 						<span class="port-tag">UX/UI</span>
 						<span class="port-tag">Frontend</span>
 						<span class="port-tag">Wordpress</span>
-						<p class="port-description">Miami University of Science & Tecnology. I was responsible for all the elements of the brand. The first version of the website was focusing in a specific target and it was developed in Wordpress to quickly test some possibilities of changes and maintenance.</p>
+						<p class="port-description">I was responsible for all the elements of the brand. The first version of the website was focused in a specific target and it was developed in Wordpress to quickly test some possibilities of changes and maintenance. M.U.S.T. is the abbreviation of Miami University of Science & Tecnology.</p>
 					</li>
 					<li id="spotify" class="port-item">
 						<span class="port-gallery">
@@ -46,7 +46,7 @@
 						<span class="port-tag">Concept</span>
 						<span class="port-tag">Prototype</span>
 						<span class="port-tag">Frontend</span>
-						<p class="port-description">I love the simplicity of things. Unfortenately, Spotify doesn't have a small version of it, where you can listen to music keeping a miniplayer above your windows. So I made this prototype (without music) just to check what could be possible to do without hurting the current use of Spotify. <a class="port-link" href="/port/spotify" target="_blank">Check out this prototype →</a></p>
+						<p class="port-description">Spotify doesn't have a small version of it, where you can listen to music keeping a miniplayer above your windows. So I made this prototype (without music) just to check what could be possible to do without hurting the current use of Spotify. <a class="port-link" href="/port/spotify" target="_blank">Check out this prototype →</a></p>
 						
 					</li>
 					<li id="9digito" class="port-item">
@@ -59,7 +59,7 @@
 						<span class="port-tag">Logo</span>
 						<span class="port-tag">UX/UI</span>
 						<span class="port-tag">iOS</span>
-						<p class="port-description">9Dígito was a iOS App to attend a special demand for mobile number change in Brazil and it reached 3rd place on overall FREE of App Store helping hundreds of thousands to fix their contact numbers. The main feature among our competitors was the ease of use. It was made in partership with Lucas Michelini who wrote the iOS code.</p>
+						<p class="port-description">9Dígito was the 3rd place on overall FREE of App Store in jul/ago of 2012. This iOS App was made to attend a special demand for mobile number change in Brazil helping hundreds of thousands to fix their contact numbers. The main feature among our competitors was the ease of use. It was made in partership with Lucas Michelini who wrote the iOS code.</p>
 					</li>
 					<li id="cademeufilho" class="port-item">
 						<span class="port-gallery">
@@ -70,12 +70,12 @@
 						<h3 class="port-title">Cadê meu filho?</h3>
 						<span class="port-tag">Concept</span>
 						<span class="port-tag">UX/UI</span>
-						<p class="port-description">It was just a simple prototype to evaluate an idea for parents to know where they children are. The idea didn't come out of the paper.</p>
+						<p class="port-description">It was just a simple prototype to evaluate an idea for parents to know where their children are. The name of the app means "Where is my kid?".</p>
 					</li>
 					<li id="rosamais" class="port-item">
 						<span class="port-gallery">
-							<img class="port-img port-img-2" src="img/port/rosamais-port2-2.png" alt="RosaMais / Borbô Lingerie">
-							<img class="port-img port-img-2" src="img/port/rosamais-port2-1.png" alt="RosaMais / Borbô Lingerie">
+							<img class="port-img port-img-2" src="img/port/rosamais-port2-2.png" alt="Borbô Lingerie">
+							<img class="port-img port-img-2" src="img/port/rosamais-port2-1.png" alt="Borbô Lingerie">
 						</span>
 						<h3 class="port-title">Borbô</h3>
 						<span class="port-tag">UX/UI</span>
