allowing google to index my site

--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@ Hi! Thanks for visiting the code! =)
 		<title>Fábio Z.C. | Product (UX/UI) and Frontend Designer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="css/style.css" rel="stylesheet" />
-		<!-- For personal reasons I temporally disabled Google from indexing my site -->
-		<link rel="canonical">
-		<meta name="robots" content="noindex" />
 	</head>
 	<body class="home">
 		<section id="intro" class="main-section container intro js-intro">
@@ -30,7 +27,7 @@ Hi! Thanks for visiting the code! =)
 						<span class="port-tag">UX/UI</span>
 						<span class="port-tag">Frontend</span>
 						<span class="port-tag">SEO</span>
-						<p class="port-description">I've joined as Co-Founder in 2012 and helped them from the initial concept to profitable operations, in a short period of time we became leaders of coupon code market in Brazil. An extremely data driven company with a strong focus in SEO. I have been with Cuponomia at 500 Startup accelerator program in Mountain View, California. I was leading the design team and with a close relation with marketing, product, content and development area. <a class="port-link" href="http://www.cuponomia.com.br" target="_blank">Visit Cuponomia →</a></p>
+						<p class="port-description">I've joined as Co-Founder in 2012 and helped them from the initial concept to profitable operations, in a short period of time we became leaders of coupon code market in Brazil. An extremely data driven company with a strong focus in SEO. I have been with Cuponomia at 500 Startup accelerator program in Mountain View, California. I was leading the design team and with a close relation with marketing, product, content and development area. <a class="port-link" href="https://www.cuponomia.com.br" target="_blank" rel="nofollow">Visit Cuponomia →</a></p>
 					</li>
 					<li id="must" class="port-item">
 						<span class="port-gallery">
